# cloup

./: Cargo.toml  README.md  todo.txt
.cargo/: config.toml
.github/workflows/: test-rust.yaml  test.yaml
src/: cli.rs  constants.rs  main.rs  tests.rs  utils.rs
src/commands/: apply.rs  create.rs  delete.rs  info.rs  init.rs  list.rs  mod.rs  namespace.rs  workspace.rs
src/dirs/: mod.rs
src/toml/: data.rs  lexer.rs  mod.rs  parser.rs  test.toml
src/utils/: color.rs  config.rs  file.rs  mod.rs  parse.rs
