[package]
name = "cloup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
fs_extra = "1.2.0"
ignore = "0.4.18"
thiserror = "1.0.35"
